// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atom/Index/Button Primary 1`] = `
<button
  className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiButton-root-gxQIQh HSLTP Button__StyledButton-sc-1hjjp9y-0 kFAzhV"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <div>
    primary button
  </div>
</button>
`;

exports[`Storyshots Atom/Index/Button Secondary 1`] = `
<button
  className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root MuiButton-root-gxQIQh bRyAcd Button__StyledButton-sc-1hjjp9y-0 kFAzhV"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <div>
    secondary button
  </div>
</button>
`;
